Issue #87: Added vertical spacing between the player panels.
Really only applies to mobile devices, when the panels are vertically
stacked.

--- a/rps-tourney-webapp/src/main/webapp/WEB-INF/resources/css/rps.less
+++ b/rps-tourney-webapp/src/main/webapp/WEB-INF/resources/css/rps.less
@@ -94,7 +94,7 @@ p#created {
 		#player-first, #player-second {
 			.panel;
 			.panel-default;
-			margin-bottom: 0;
+			margin-bottom: 10px;
 	
 			p.player-name {
 				text-align: center;
